--- a/public/500.html
+++ b/public/500.html
@@ -1,66 +1,71 @@
-<!DOCTYPE html>
 <html>
-<head>
-  <title>We're sorry, but something went wrong (500)</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <style>
-  .rails-default-error-page {
-    background-color: #EFEFEF;
-    color: #2E2F30;
-    text-align: center;
-    font-family: arial, sans-serif;
-    margin: 0;
-  }
+  <head>
+    <title>What you were looking for was not found (404)</title>
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel="stylesheet">
+    <style>
+      .error-pages {
+        color: #66CDAA;
+        background-color: #499EAA;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        height: 100vh;
+        margin: 0;
+        padding: 0;
+      }
 
-  .rails-default-error-page div.dialog {
-    width: 95%;
-    max-width: 33em;
-    margin: 4em auto 0;
-  }
+      img {
+        max-height: 75vh;
+      }
 
-  .rails-default-error-page div.dialog > div {
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #BBB;
-    border-top: #B00100 solid 4px;
-    border-top-left-radius: 9px;
-    border-top-right-radius: 9px;
-    background-color: white;
-    padding: 7px 12% 0;
-    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
-  }
+      h1 {
+        font-family: 'Ubuntu';
+        font-weight: bold;
+        font-size: 250px;
+        color: white;
+        max-height: 50px;
+        margin-top: 0px;
+        padding-top: 26px;
+      }
 
-  .rails-default-error-page h1 {
-    font-size: 100%;
-    color: #730E15;
-    line-height: 1.5em;
-  }
+      h2 {
+        font-family: 'Ubuntu';
+        font-style: italic;
+        font-weight: 300;
+        font-size: 25px;
+        line-height: 39px;
+        color: #FFFFFF;
+        padding-top: 10px;
+      }
+      .feuilles {
+        padding-left: 500px;
+        max-height: 0px;
+      }
 
-  .rails-default-error-page div.dialog > p {
-    margin: 0 0 1em;
-    padding: 1em;
-    background-color: #F7F7F7;
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #999;
-    border-bottom-left-radius: 4px;
-    border-bottom-right-radius: 4px;
-    border-top-color: #DADADA;
-    color: #666;
-    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
-  }
-  </style>
-</head>
+      .error-pages-content {
+        padding-left: 600px;
+      }
 
-<body class="rails-default-error-page">
-  <!-- This file lives in public/500.html -->
-  <div class="dialog">
-    <div>
-      <h1>We're sorry, but something went wrong.</h1>
+      .umbrella {
+        padding-left: 1150px;
+      }
+
+    </style>
+  </head>
+  <body class="error-pages" cz-shortcut-listen="true">
+
+    <div class="umbrella">
+      <img src="/assets/Umbrella.png" alt="">
     </div>
-    <p>If you are the application owner check the logs for more information.</p>
-  </div>
-</body>
+
+      <div class="feuilles">
+      <img src="/assets/Feuilles.png" alt="">
+    </div>
+
+    <h1>500</h1>
+    <h2>Oups ! Cette page est introuvable !</h2>
+     <div class="error-pages-content">
+      <img src="/assets/error_pages_content.png" alt="">
+    </div>
+  </body>
 </html>
